postgrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: postgrest
spec:
  selector:
    app: postgrest  # routes to any pod with this label
  ports:
    - port: 3000
      targetPort: 3000
